# Meeting-Translation-System

./: .env  .gitignore  README.md  app.py  main.py  models.py  pyproject.toml  render.yaml  requirements.txt  requirements2.txt
instance/: translations.db
static/css/: style.css
static/js/: speech.js
templates/: base.html  index.html  room.html
